[package]
name = "rust-esp32-recv"
version = "0.1.0"
authors = ["Kamil Grzymkowski <kamo.gabo@gmail.com>"]
edition = "2021"
license = "MIT"

[profile.dev]
opt-level = 3
debug = true


[profile.release]
opt-level = 3
debug = true


[dependencies]
defmt = "0.3.5"

embassy-executor = { version = "0.5.0", features = ["nightly","integrated-timers",] }
embassy-time = { version = "0.3.0" }
embassy-net = { version = "0.4.0", features = ["tcp","udp","dhcpv4","medium-ethernet","dns"] }
embassy-sync = { version = "*" }
embassy-futures = {version = "0.1.1"}


smoltcp = { version = "0.11.0", default-features = false, features = ["medium-ethernet","socket-raw",] }

embedded-svc = { version = "0.27.0", default-features = false, features = [] }

esp-hal-procmacros = { version = "0.8.0", default-features=false, features = ["ram","embassy","esp32","interrupt"] }
esp-wifi = { version = "0.3.0", features = ["esp32","wifi","esp-now","async","embassy-net"] }
esp32-hal = {version = "0.18.0", default-features=true, features=[
    # "embassy",
    "embassy-time-timg0",
    # "rt",
    "embassy-executor-interrupt",
    "embassy-executor-thread",
    # "embassy-integrated-timers"
]}

esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32", "log","defmt-espflash"] }
esp-alloc = { version = "0.3.0" }

static_cell = { version = "2.0", features = ["nightly"] }

rust-mqtt = { version = "0.3.0", default-features=false, features = ["no_std"] }
int-enum = "1.0.1"
heapless = "0.8.0"

[features]
default = ["esp32-hal/xtal-40mhz"]

